@@ -1,6 +1,6 @@
 package dk.sep3.dbserver.service.passwordManager;
 
-import dk.sep3.dbserver.model.passwordManager.db_entities.User;
+import dk.sep3.dbserver.model.passwordManager.db_entities.MasterUser;
 import dk.sep3.dbserver.repositories.passwordManagerDb.MasterUserRepository;
 import dk.sep3.dbserver.service.exceptions.NotFoundInDBException;
 import jakarta.persistence.PersistenceException;
@@ -24,56 +24,54 @@ public class MasterUserRepositoryServiceImpl implements MasterUserRepositoryServ
     this.masterUserRepository = masterUserRepository;
   }
 
-
-  @Override public User createUser(User user) throws DataIntegrityViolationException, PersistenceException {
+  @Override public MasterUser createMasterUser(MasterUser masterUser) throws DataIntegrityViolationException, PersistenceException {
     // Validate received data, before passing to repository/database:
-    if(user == null || user.getUsername() == null || user.getEncryptedPassword() == null)
-      throw new DataIntegrityViolationException("User cannot be null");
+    if(masterUser == null || masterUser.getMasterUsername() == null || masterUser.getEncryptedPassword() == null)
+      throw new DataIntegrityViolationException("MasterUser cannot be null");
 
-    // Attempt to add User to DB:
+    // Attempt to add MasterUser to DB:
     try {
-      User newUser = masterUserRepository.save(user);
-      logger.info("User {} added to DB", newUser.getUsername());
-      return newUser;
+      MasterUser newMasterUser = masterUserRepository.save(masterUser);
+      logger.info("MasterUser {} added to DB", newMasterUser.getMasterUsername());
+      return newMasterUser;
 
     } catch (IllegalArgumentException | ConstraintViolationException | DataIntegrityViolationException e) {
-      // Handle exceptions cause by incompatible data formats (either java or sql ddl mismatch in definitions):
-      logger.error("Unable to register User {} in DB, Reason: {}", user.getUsername(), e.getMessage());
-      throw new DataIntegrityViolationException("Invalid User provided. Incompatible with database!");
+      // Handle exceptions caused by incompatible data formats (either java or sql ddl mismatch in definitions):
+      logger.error("Unable to register MasterUser {} in DB, Reason: {}", masterUser.getMasterUsername(), e.getMessage());
+      throw new DataIntegrityViolationException("Invalid MasterUser provided. Incompatible with database!");
 
     } catch (PersistenceException e) {
       // Handle other exceptions relating to persistence and connectivity:
-      logger.error("Persistence exception occurred while registering User {}, Reason: {}", user.getUsername(), e.getMessage());
+      logger.error("Persistence exception occurred while registering MasterUser {}, Reason: {}", masterUser.getMasterUsername(), e.getMessage());
       throw new PersistenceException(e);
     }
   }
 
-
-  @Override public User readUser(String username, String encryptedPassword) throws NotFoundInDBException, DataIntegrityViolationException, PersistenceException {
+  @Override public MasterUser readMasterUser(String masterUsername, String encryptedPassword) throws NotFoundInDBException, DataIntegrityViolationException, PersistenceException {
     // Validate received data, before passing to repository/database:
-    if(username == null)
-      throw new DataIntegrityViolationException("Username cannot be null");
+    if(masterUsername == null)
+      throw new DataIntegrityViolationException("MasterUsername cannot be null");
 
-    // Attempt to fetch User from DB:
+    // Attempt to fetch MasterUser from DB:
     try {
       // Causes the repository to query the database. If no match is found, an error is thrown immediately.
-      List<User> usersFound = masterUserRepository.findByUsernameAndEncryptedPassword(username, encryptedPassword);
-      if(usersFound.isEmpty())
-        throw new NotFoundInDBException("User {" + username + "} not found in DB");
-      else if (usersFound.size() > 1)
-        throw new DataIntegrityViolationException("Multiple matching users found in database. Only one matching user is allowed");
+      List<MasterUser> masterUsersFound = masterUserRepository.findByMasterUsernameAndEncryptedPassword(masterUsername, encryptedPassword);
+      if(masterUsersFound.isEmpty())
+        throw new NotFoundInDBException("MasterUser {" + masterUsername + "} not found in DB");
+      else if (masterUsersFound.size() > 1)
+        throw new DataIntegrityViolationException("Multiple matching masterUsers found in database. Only one matching masterUser is allowed");
 
-      logger.info("User {} read from DB", username);
-      return usersFound.getFirst();
+      logger.info("MasterUser {} read from DB", masterUsername);
+      return masterUsersFound.get(0); // Assuming List.getFirst() should be replaced with get(0) for Java List.
 
     } catch (IllegalArgumentException | ConstraintViolationException | DataIntegrityViolationException e) {
-      // Handle exceptions cause by incompatible data formats (either java or sql ddl mismatch in definitions):
-      logger.error("Unable to fetch User {} in DB, Reason: {}", username, e.getMessage());
-      throw new DataIntegrityViolationException("Invalid Username provided. Incompatible with database!");
+      // Handle exceptions caused by incompatible data formats (either java or sql ddl mismatch in definitions):
+      logger.error("Unable to fetch MasterUser {} in DB, Reason: {}", masterUsername, e.getMessage());
+      throw new DataIntegrityViolationException("Invalid MasterUsername provided. Incompatible with database!");
 
     } catch (PersistenceException e) {
       // Handle other exceptions relating to persistence and connectivity:
-      logger.error("Persistence exception occurred while fetching User {}, Reason: {}", username, e.getMessage());
+      logger.error("Persistence exception occurred while fetching MasterUser {}, Reason: {}", masterUsername, e.getMessage());
       throw new PersistenceException(e);
     }
   }
